--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=27017
 DB_NAME=manga-project
 JWT_SECRET=queotatio
 FRONT_URL=http://localhost:3000
-MANGA_FOLDER=/home/lucas/manga-reader/backend/mangas
+MANGA_FOLDER=/ReactJS/manga-web/manga-reader/backend/mangas
